--- a/index.html
+++ b/index.html
@@ -764,16 +764,7 @@ function getVendedorColor(v){ if(!v) return '#9aa3b2'; if(!STATE.colorByVendedor
 function svgPin(color){ const fill=color||'#3b82f6'; const stroke='#08121f'; const svg=`<svg xmlns="http://www.w3.org/2000/svg" width="26" height="38" viewBox="0 0 26 38"><path d="M13 0C7 0 2 5 2 11c0 7.5 9 17 11 19 2-2 11-11.5 11-19C24 5 19 0 13 0z" fill="${fill}" stroke="${stroke}" stroke-width="2"/><circle cx="13" cy="12" r="4.2" fill="#fff" stroke="${stroke}" stroke-width="2"/></svg>`; return 'data:image/svg+xml;base64,'+btoa(svg); }
 function pinIcon(color){ if(!STATE.iconByColor[color]){ STATE.iconByColor[color]=L.icon({iconUrl:svgPin(color), iconSize:[26,38], iconAnchor:[13,36], popupAnchor:[0,-30], className:'vendor-pin'});} return STATE.iconByColor[color]; }
 function renderMap(){
-  
-  if(!window.__rd_centered_once){
-    window.__rd_centered_once = true;
-    try{
-      if(window.STATE && STATE.map){
-        STATE.map.setView([18.735693,-70.162651], 8);
-      }
-    }catch(_){}
-  }
-initMap(); clearMarkers(); const bounds=[]; let rendered=0;
+  initMap(); clearMarkers(); const bounds=[]; let rendered=0;
   STATE.filtered.forEach(x=>{ if(!isFinite(x.lat)||!isFinite(x.lon)) return; const color=getVendedorColor(x.vendedor); const m=L.marker([x.lat,x.lon],{ icon: pinIcon(color) }).addTo(STATE.map);
     m.bindPopup(`<strong>${x.nombre}</strong><div class="muted">Cod ${x.cod} • ${x.empresa||''}</div><div>Semana: ${x.semana} • Día: ${x.dia}</div><div>Vendedor: ${x.vendedor||'-'} • Gestor: ${x.gestor||'-'}</div>`);
     m.on('click',()=>selectCliente(x)); STATE.markers.push(m); bounds.push([x.lat,x.lon]); rendered++; });
@@ -1099,7 +1090,7 @@ document.getElementById('btnCallGuardar').addEventListener('click', saveCallReco
 }
 function fallbackToDemo(){ STATE.users = DEMO.usuarios.map(mapUserRecord); STATE.clientes = DEMO.clientes; STATE.calendario = DEMO.calendario; }
 
-window.addEventListener('DOMContentLoaded', ()=>{ init(); /* initMap se activa tras mostrar la app */ });
+window.addEventListener('DOMContentLoaded', ()=>{ init(); initMap(); });
 </script>
 
 <script>
@@ -1153,16 +1144,7 @@ allCalls = function() {
 // Mapa: centrar y abrir popup del cliente seleccionado
 let markerByCod = {};
 function renderMap(){
-  
-  if(!window.__rd_centered_once){
-    window.__rd_centered_once = true;
-    try{
-      if(window.STATE && STATE.map){
-        STATE.map.setView([18.735693,-70.162651], 8);
-      }
-    }catch(_){}
-  }
-initMap(); clearMarkers(); markerByCod = {}; const bounds=[]; let rendered=0;
+  initMap(); clearMarkers(); markerByCod = {}; const bounds=[]; let rendered=0;
   STATE.filtered.forEach(x=>{ 
     if(!isFinite(x.lat)||!isFinite(x.lon)) return; 
     const color=getVendedorColor(x.vendedor); 
@@ -2800,19 +2782,6 @@ document.addEventListener('click', (ev)=>{
     } else if(id==="app"){
       const ap = document.getElementById("app");
       if(ap) ap.classList.remove("hidden");
-    
-        try{
-          setTimeout(function(){
-            try{
-              if(typeof initMap==='function' && (!window.STATE || !STATE.map)) initMap();
-              if(typeof applyFilters==='function') applyFilters();
-              if(window.STATE && STATE.map){
-                STATE.map.setView([18.735693,-70.162651], 8);
-                STATE.map.invalidateSize();
-              }
-            }catch(_){}
-          }, 80);
-        }catch(_){}
     } else if(id==="screenResumenSem"){
       const rs = document.getElementById("screenResumenSem");
       if(rs) rs.style.display = "";
@@ -5050,20 +5019,7 @@ document.getElementById('rsTabReal').onclick = (e)=>{ e.target.classList.add('ac
         try{
           var lg = document.getElementById('login'); if(lg) lg.style.display='none';
           var ap = document.getElementById('app'); if(ap) ap.classList.remove('hidden');
-        
-            try{
-              setTimeout(function(){
-                try{
-                  if(typeof initMap==='function' && (!window.STATE || !STATE.map)) initMap();
-                  if(typeof applyFilters==='function') applyFilters();
-                  if(window.STATE && STATE.map){
-                    STATE.map.setView([18.735693,-70.162651], 8);
-                    STATE.map.invalidateSize();
-                  }
-                }catch(_){}
-              }, 80);
-            }catch(_){}
-    }catch(e){ console.warn(e); }
+        }catch(e){ console.warn(e); }
       } else {
         alert('Usuario o contraseña inválidos. Tip: demo / 1234');
       }
@@ -5165,6 +5121,75 @@ document.getElementById('rsTabReal').onclick = (e)=>{ e.target.classList.add('ac
 
   document.addEventListener('DOMContentLoaded', init);
   window.addEventListener('load', () => setTimeout(applyToExisting, 100));
+})();
+</script>
+
+
+<!-- Map Ready & Center Fix (auto after login/show) -->
+<script>
+(function(){
+  function ensureTileLayer() {
+    try{
+      if(!(window.STATE && STATE.map)) return false;
+      var hasTile = false;
+      if (STATE.map && STATE.map.eachLayer) {
+        STATE.map.eachLayer(function(l){
+          try{ if (l && typeof l.getAttribution==='function' && String(l.getAttribution()).toLowerCase().includes('openstreetmap')) { hasTile = true; } }catch(_){}
+        });
+      }
+      if(!hasTile && window.L){
+        L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+          maxZoom: 19,
+          attribution: '&copy; OpenStreetMap'
+        }).addTo(STATE.map);
+      }
+      return true;
+    }catch(e){ return false; }
+  }
+
+  function ensureMapReady(){
+    try{
+      if (typeof initMap === 'function' && (!window.STATE || !STATE.map)) { initMap(); }
+      var ok = ensureTileLayer();
+      if (window.STATE && STATE.map){
+        // Center on Dominican Republic on first paint
+        try { STATE.map.setView([18.735693,-70.162651], 8); } catch(_){}
+        try { STATE.map.invalidateSize(); } catch(_){}
+        // Second pass after layout settles
+        setTimeout(function(){
+          try { STATE.map.invalidateSize(); } catch(_){}
+          if (typeof applyFilters === 'function') { try { applyFilters(); } catch(_){ } }
+        }, 180);
+      } else {
+        // Retry shortly if map isn't ready yet
+        setTimeout(ensureMapReady, 180);
+      }
+    }catch(_){}
+  }
+
+  // Run after full load and after showing the app
+  window.addEventListener('load', function(){
+    setTimeout(ensureMapReady, 60);
+    setTimeout(ensureMapReady, 300);
+  });
+
+  // If #app becomes visible after login, trigger ensureMapReady()
+  var ap = document.getElementById('app');
+  if (ap && window.MutationObserver){
+    var mo = new MutationObserver(function(){
+      if (!ap.classList.contains('hidden')) { ensureMapReady(); }
+    });
+    mo.observe(ap, {attributes: true, attributeFilter: ['class']});
+  }
+
+  // Invalidate on #map resize
+  var mapEl = document.getElementById('map');
+  if (mapEl && window.ResizeObserver){
+    var ro = new ResizeObserver(function(){
+      try { if (window.STATE && STATE.map) STATE.map.invalidateSize(); } catch(_){}
+    });
+    ro.observe(mapEl);
+  }
 })();
 </script>
 
