--- a/index.html
+++ b/index.html
@@ -322,12 +322,12 @@ body.show-resumen #screenResumenSem > .card {
         </div>
         <div><label>Resultado</label>
           <select id="callResultado">
-<option value="Exitosa">Exitosa</option>
-<option value="Gestión de pedido recibido">Gestión de pedido recibido</option>
-<option value="No contesta">No contesta</option>
-<option value="Ocupado">Ocupado</option>
-<option value="Número equivocado">Número equivocado</option>
-<option value="Rechazada">Rechazada</option>
+<option value="Exitosa con Cita">Exitosa con Cita</option>
+<option value="Exitosa Con Venta">Exitosa Con Venta</option>
+<option value="Exitosa seguimiento a recepción de pedido">Exitosa seguimiento a recepción de pedido</option>
+<option value="No Contesta">No Contesta</option>
+<option value="No Compro">No Compro</option>
+<option value="Captacion de Cliente">Captacion de Cliente</option>
 </select>
         </div>
         <div><label>Duración (seg.)</label><input id="callDuracion" type="number" min="0" step="1" value="0" /></div>
@@ -371,9 +371,8 @@ body.show-resumen #screenResumenSem > .card {
         <div><label>Gestor</label><input id="repGestor" type="text" placeholder="(todos)"/></div>
         <div><label>Resultado</label>
           <select id="repResultado">
-            <option value="">(todos)</option><option>Exitosa</option><option>No contesta</option>
-            <option>Ocupado</option><option>Número equivocado</option><option>Rechazada</option>
-          </select>
+<option value="">(todos)</option><option>Exitosa con Cita</option><option>Exitosa Con Venta</option><option>Exitosa seguimiento a recepción de pedido</option><option>No Contesta</option><option>No Compro</option><option>Captacion de Cliente</option>
+</select>
         </div>
         <div><label>&nbsp;</label><button id="repExport" class="btn">⬇ Exportar CSV</button></div>
       </div>
