--- a/index.html
+++ b/index.html
@@ -371,7 +371,12 @@ body.show-resumen #screenResumenSem > .card {
         <div><label>Gestor</label><input id="repGestor" type="text" placeholder="(todos)"/></div>
         <div><label>Resultado</label>
           <select id="repResultado">
-<option value="">(todos)</option><option>Exitosa con Cita</option><option>Exitosa Con Venta</option><option>Exitosa seguimiento a recepción de pedido</option><option>No Contesta</option><option>No Compro</option><option>Captacion de Cliente</option>
+<option value="Exitosa con Cita">Exitosa con Cita</option>
+<option value="Exitosa Con Venta">Exitosa Con Venta</option>
+<option value="Exitosa seguimiento a recepción de pedido">Exitosa seguimiento a recepción de pedido</option>
+<option value="No Contesta">No Contesta</option>
+<option value="No Compro">No Compro</option>
+<option value="Captacion de Cliente">Captacion de Cliente</option>
 </select>
         </div>
         <div><label>&nbsp;</label><button id="repExport" class="btn">⬇ Exportar CSV</button></div>
