--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@ body.show-resumen #screenResumenSem > .card {
         <div><label>Vendedor</label><input id="repVendedor" type="text" placeholder="(todos)"/></div>
         <div><label>Gestor</label><input id="repGestor" type="text" placeholder="(todos)"/></div>
         <div><label>Resultado</label>
-          <select id="repResultado">
+          <select id="repResultado"><option value="">(todos)</option>
 <option value="Exitosa con Cita">Exitosa con Cita</option>
 <option value="Exitosa Con Venta">Exitosa Con Venta</option>
 <option value="Exitosa seguimiento a recepción de pedido">Exitosa seguimiento a recepción de pedido</option>
